packages/rust/crates/xiuxian-wendao-modelica/src/plugin/snapshots/xiuxian_wendao_modelica__plugin__relations__tests__doc_targets_for_file_doc_links_users_guide_docs_to_owner_modules.snap
---
source: packages/rust/crates/xiuxian-wendao-modelica/src/plugin/relations.rs
expression: payload
---
[
  {
    "path": "README.md",
    "targets": [
      "repo:modelica-demo:module:DemoLib"
    ]
  },
  {
    "path": "UsersGuide/Overview.mo",
    "targets": [
      "repo:modelica-demo:module:DemoLib",
      "repo:modelica-demo:module:DemoLib.UsersGuide"
    ]
  },
  {
    "path": "Controllers/UsersGuide/Tuning.mo",
    "targets": [
      "repo:modelica-demo:module:DemoLib.Controllers",
      "repo:modelica-demo:module:DemoLib.Controllers.UsersGuide"
    ]
  },
  {
    "path": "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
    "targets": [
      "repo:modelica-demo:module:DemoLib.Controllers",
      "repo:modelica-demo:module:DemoLib.Controllers.UsersGuide",
      "repo:modelica-demo:module:DemoLib.Controllers.UsersGuide.Tutorial"
    ]
  }
]
